# fancytray

./: CMakeLists.txt  README.md  example-launcher.sh  extratrayicon.cpp  extratrayicon.h  main.cpp  tray.cpp  tray.h  tray.kdev4
tests/: CMakeLists.txt  trayTest.cpp  trayTest.h
